CHATS_SIT/force-app/main/default/objects/T_POS_TRANS_QUEUE_ATS__c/T_POS_TRANS_QUEUE_ATS__c.object-meta.xml
<CustomObject>
    <label>T_POS_TRANS_QUEUE_ATS</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>IDN_QUEUE_TRANS_ATS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T_POS_TRANS_QUEUE_ATSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>