CHATS_SIT/force-app/main/default/objects/T_POS_TRANS_QUEUE_ATS__c/fields/CDE_TYPE_TRANS__c.field-meta.xml
<CustomField>
    <fullName>CDE_TYPE_TRANS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CDE_TYPE_TRANS</label>
    <length>3</length>
    <type>Text</type>
</CustomField>