CHATS_SIT/force-app/main/default/objects/T_POS_TRANS_QUEUE_ATS__c/fields/DTE_CHANGE_LAST__c.field-meta.xml
<CustomField>
    <fullName>DTE_CHANGE_LAST__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DTE_CHANGE_LAST</label>
    <type>Date</type>
</CustomField>