CHATS_SIT/force-app/main/default/objects/T_POS_TRANS_QUEUE_ATS__c/fields/ERROR_DETAILS__c.field-meta.xml
<CustomField>
    <fullName>ERROR_DETAILS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ERROR_DETAILS</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>