CHATS_SIT/force-app/main/default/objects/T_POS_TRANS_QUEUE_ATS__c/fields/IDN_CLIENT__c.field-meta.xml
<CustomField>
    <fullName>IDN_CLIENT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDN_CLIENT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>