CHATS_SIT/force-app/main/default/objects/T_POS_TRANS_QUEUE_ATS__c/fields/IDN_PROVR__c.field-meta.xml
<CustomField>
    <fullName>IDN_PROVR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDN_PROVR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>